# poems-2023

./: README.md
赛道一_一等奖 _李建烨/: README.md  运算式计算器.cpp
赛道一_一等奖_邵艺博/物理实验数据处理器/: README.md  物理实验数据处理器源代码.cpp
赛道一_一等奖_邵艺博/计算器/: README.md  计算器源代码.cpp
赛道一_二等奖_丘绎楦/: README.md  project.cpp  赛道一.txt
赛道一_二等奖_李光磐/: README.md  十行代码.cpp
赛道一_二等奖_杜伟超/: README.md  题目a.cpp  题目b.cpp
赛道二_一等奖_徐元昌_bitroom/: readme.txt
赛道二_一等奖_徐元昌_bitroom/bitroom/: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
赛道二_一等奖_徐元昌_bitroom/bitroom/.github/workflows/: release.yml  sync-repo.yml
赛道二_一等奖_徐元昌_bitroom/bitroom/src/bitroom/: __init__.py  cli.py  config.py  room.py
赛道二_一等奖_徐元昌_bitroom/bitroom/src/bitroom/auth/: auth.py  encrypt_js.py
赛道二_二等奖 马流羡_嘉然今天吃什么/: README.md
赛道二_二等奖 马流羡_嘉然今天吃什么/v1/: choose_recipe.cpp  choose_recipe.h  choose_recipe.ui  enter_recipe.cpp  enter_recipe.h  enter_recipe.ui  evaluate_recipe.cpp  evaluate_recipe.h  evaluate_recipe.ui  faceicon.rc  fu.cpp  fu.h  main.cpp  main_jiaran.qrc  project_feedback.cpp  project_feedback.h  rand.cpp  rand.h  start.cpp  start.h  start.ui  v1.pro
赛道二_二等奖_沈宇航_综测表一生成表二/: LICENSE  README.md  综测表1生成表2.py
赛道二_二等奖_钟子仪/: AIO_login.py  Network_Alive.py  README.md  Tray_Launcher.pyw
赛道二_特等奖_庄子涵/: README.md
